Closed Bug 344362 Opened 18 years ago Closed 18 years ago

xsl:output omit-xml-declaration="no" does not create an XML declaration

Categories

(Core :: XSLT, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: martin.honnen, Assigned: peterv)

References

()

Details

Attachments

(1 file)

In the XSLT newsgroup there was a complaint that Mozilla's XSLT processor does not generate an XML declaration with output method xml:
<http://groups.google.com/group/mozilla.dev.tech.xslt/browse_frm/thread/82126090626f502f/34052abecbc660b5?hl=en#34052abecbc660b5>

I have made two test cases, one using script here:
<http://home.arcor.de/martin.honnen/mozillaBugs/xslt/xslOutputOmitXmlDeclaration1.html>
That test case runs transformToDocument twice, the first time with omit-xml-declaration="no", the second time with omit-xml-declaration="yes", serializing the result documents with XMLSerializer. Both result documents do not have an XML declaration.

The second test case uses an xml-stylesheet pi here:
<http://home.arcor.de/martin.honnen/mozillaBugs/xslt/test2006071201.xml>

If you choose "Save page as" -> "as complete web page" then Mozilla saves you the result of the XSLT transformation but there is no XML declaration in the saved document.

The problem occurs with both Firefox 1.5 release as well as with trunk nightlies.
Attached patch v1Splinter Review
Assignee: xslt → peterv
Status: NEW → ASSIGNED
Attachment #229231 - Flags: superreview?(bugmail)
Attachment #229231 - Flags: review?(bugmail)
Attachment #229231 - Flags: superreview?(bugmail)
Attachment #229231 - Flags: superreview+
Attachment #229231 - Flags: review?(bugmail)
Attachment #229231 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: