Fix for bug 344362 (xsl:output omit-xml-declaration="no" does not create an XML declaration). r/sr=sicking.